commit jjba site now with css

--- a/Exercises/exercise 1/index Modèle de départ.html
+++ b/Exercises/exercise 1/index Modèle de départ.html
@@ -17,7 +17,7 @@
 <p>top 3 des meilleurs stand</p>
 
 <ol>
-    <li>catch the rainbow</li>
+    <li><b>catch the rainbow</b></li>
     <li>Sticky finger</li>
     <li>tusk</li>
 </ol>
