renommer mon index

--- a/Exercises/exercise 1/index.html
+++ b/Exercises/exercise 1/index.html
@@ -1,13 +1,32 @@
-<!DOCTYPE html>
+<!-- Jordan Rioux 30 aout 2018  -->
+<!DOCTYPE html>  
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<head> <!-- En-tête du document qui n'est pas visible et qui permet de donner des informations au navigateur -->
+	<title>JJBAO</title>
+	<meta  charset="UTF-8">
+	<meta name="title" content="Is that a JoJo reference">
+	<meta name="description" content="tout plein de JoJo reference parce que je peut">
+	<meta name="author" content="rioux JORDAN">
+	<meta name="keywords" content="JoJo's bizarre adventure, JJBA, ...">
+	<meta name="robots" content="index,follow">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
-</body>
-</h1>
-what a beautiful duwang !
-</h1>
-<h2>i am the strong</h2>
+<body>
+ <h1>
+	 Bienvenue sur sur JoJo reference online
+ </h1>
+ <p>JoJo's bizarre adventure mieux connu au Japon sous le nom de <em>JoJo no kimyou wa bouken</em> est un manga écrit et dessinnée par Hirohiko Araki</p>
+ à
+<p>Mon top 5 de stand préféré</p>
+
+<ol>
+    <li>Catch the Rainbow</li>
+    <li>Sticky Finger</li>
+    <li>Tusk</li>
+    <li>Crazy Diamond</li>
+    <li>Aerosmith</li>
+
+</ol>
+<p><a href="index.html">use Dirty Deeds Done Dirt Cheap</a></p>
 </body>
 </html>
