--- a/Exercises/exercise 1/index.html
+++ b/Exercises/exercise 1/index.html
@@ -16,8 +16,10 @@
 	 Bienvenue sur sur JoJo reference online
  </h1>
  <p>JoJo's bizarre adventure mieux connu au Japon sous le nom de <em>JoJo no kimyou wa bouken</em> est un manga écrit et dessinnée par Hirohiko Araki</p>
- à
-<p>Mon top 5 de stand préféré</p>
+ <p>le manga présente les aventure remplie de surnaturel de la famille <en>joestar</en>a travers leur descendantqui chacun possede un mysterieux pouvoir appeler stand </p>
+
+
+<h2>Mon top 5 de stand préféré</h2>
 
 <ol>
     <li>Catch the Rainbow</li>
@@ -27,6 +29,7 @@
     <li>Aerosmith</li>
 
 </ol>
-<p><a href="index.html">use Dirty Deeds Done Dirt Cheap</a></p>
+<p><a href="page2.html">use Man in the Mirror</a></p>
+ <p><a href="http://jojo.wikia.com/wiki/Main_Page">use Dirty Deeds Done Dirt Cheap</a></p>
 </body>
 </html>
