--- a/Exercises/exercise 1/page2.html
+++ b/Exercises/exercise 1/page2.html
@@ -2,11 +2,15 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>JoJoke</title>
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <h1>what a beautiful duwang !</h1>
+
     <h2>i am the strong</h2>
+    <a href="index.html">use gold experience requiem</a>
+
+    <p><img src="Images/to.be.png"/></p>
 </body>
 </html>
